# tvz_pwa_mock

./: .gitignore  Dockerfile  pyproject.toml
tvz_pwa_mock/: __init__.py
tvz_pwa_mock/app/: __init__.py
tvz_pwa_mock/app/endpoints/main_pwa/: router.py
