[tool.poetry]
name = "tvz-pwa-mock"
version = "0.1.0"
description = ""
authors = ["Rev1le <r.nikiy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start-app = "tvz_pwa_mock:run"
